change graph input from title to arxiv_id
